# CMake

practice1/: CMakeLists.txt  build.cmd  build.sh  tutorial.cpp
practice1/MathFunctions/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
practice1/MathFunctions/include/: mysqrt_lin.conf  platform.h
